exercice set time-out

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1 class="sr-only">excercice paint</h1>
+    <h1 class="sr-only">excercice Timer</h1>
 </header>
 <main>
 </main>
